force-app/main/default/objects/Solicitud_de_Avi_n__c/Solicitud_de_Avi_n__c.object-meta.xml
<CustomObject>
    <description>Gestionar las aprobaciones y solicitudes de boletos de avión</description>
    <label>Solicitud de Avión</label>
    <nameField>
        <displayFormat>SA# {00000000}</displayFormat>
        <label>Nombre de Solicitud de Avión</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitud de Avión</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>