force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Aerolinea__c.field-meta.xml
<CustomField>
    <fullName>Aerolinea__c</fullName>
    <label>Aerolinea</label>
    <length>100</length>
    <type>Text</type>
</CustomField>