force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Autorizaci_n_Especial__c.field-meta.xml
<CustomField>
    <fullName>Autorizaci_n_Especial__c</fullName>
    <formula>IF(  OR(Jefe_Directo__c  = &quot;rreyes@imperquimia.com.mx&quot;,Jefe_Directo__c  = &quot;rreyes@imperquimia.com&quot;),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Autorización Especial</label>
    <type>Checkbox</type>
</CustomField>