force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Cliente_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Cliente_Relacionado__c</fullName>
    <label>Persona/Empresa/Cliente a visitar</label>
    <length>100</length>
    <type>Text</type>
</CustomField>