force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Descripci_n_T__c.field-meta.xml
<CustomField>
    <fullName>Descripci_n_T__c</fullName>
    <label>Descripción</label>
    <type>TextArea</type>
</CustomField>