force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Destino__c.field-meta.xml
<CustomField>
    <fullName>Destino__c</fullName>
    <label>Destino</label>
    <length>100</length>
    <type>Text</type>
</CustomField>