force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Fecha_de_solicitud__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_solicitud__c</fullName>
    <label>Fecha de solicitud</label>
    <type>Date</type>
</CustomField>