force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Fecha_y_Hora_de_Regreso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_y_Hora_de_Regreso__c</fullName>
    <label>Fecha y Hora de Regreso</label>
    <type>DateTime</type>
</CustomField>