force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Jefe_Directo__c.field-meta.xml
<CustomField>
    <fullName>Jefe_Directo__c</fullName>
    <formula>Nombre_del_Empleado__r.Manager.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Jefe Directo</label>
    <type>Text</type>
</CustomField>