force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Lugar_de_Destino__c.field-meta.xml
<CustomField>
    <fullName>Lugar_de_Destino__c</fullName>
    <label>Lugar de Destino</label>
    <length>100</length>
    <type>Text</type>
</CustomField>