force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Monto_de_Transporte__c.field-meta.xml
<CustomField>
    <fullName>Monto_de_Transporte__c</fullName>
    <label>Monto de Transporte</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>