force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Monto_Viatic__c.field-meta.xml
<CustomField>
    <fullName>Monto_Viatic__c</fullName>
    <label>Monto Viáticos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>