force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/N_m_Vuelo_Regreso__c.field-meta.xml
<CustomField>
    <fullName>N_m_Vuelo_Regreso__c</fullName>
    <label>Núm Vuelo Regreso</label>
    <length>100</length>
    <type>Text</type>
</CustomField>