force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/N_m_Vuelo_Salida__c.field-meta.xml
<CustomField>
    <fullName>N_m_Vuelo_Salida__c</fullName>
    <label>Núm Vuelo Salida</label>
    <length>100</length>
    <type>Text</type>
</CustomField>