force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Nombre_del_Empleado__c.field-meta.xml
<CustomField>
    <fullName>Nombre_del_Empleado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre del Empleado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solicitud_de_Avi_n</relationshipName>
    <type>Lookup</type>
</CustomField>