force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Objetivo_de_la_Visita__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_de_la_Visita__c</fullName>
    <label>Objetivo de la Visita</label>
    <type>TextArea</type>
</CustomField>