force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Origen__c.field-meta.xml
<CustomField>
    <fullName>Origen__c</fullName>
    <label>Origen</label>
    <length>100</length>
    <type>Text</type>
</CustomField>