force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Otros_gastos_de_Viaje__c.field-meta.xml
<CustomField>
    <fullName>Otros_gastos_de_Viaje__c</fullName>
    <label>Otros gastos de Viaje</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>