force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Precio_del_boleto_regreso__c.field-meta.xml
<CustomField>
    <fullName>Precio_del_boleto_regreso__c</fullName>
    <label>Precio del boleto regreso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>