force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Resultados__c.field-meta.xml
<CustomField>
    <fullName>Resultados__c</fullName>
    <label>Resultados</label>
    <type>TextArea</type>
</CustomField>