force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Tiempo_programacion__c.field-meta.xml
<CustomField>
    <fullName>Tiempo_programacion__c</fullName>
    <formula>(Fecha_y_Hora_de_Salida__c - DATETIMEVALUE(  CreatedDate  ))-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tiempo de programación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>