force-app/main/default/objects/Solicitud_de_Avi_n__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>Monto_de_Transporte__c + Monto_Hospedaje__c + Monto_Viatic__c + Otros_gastos_de_Viaje__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>