force-app/main/default/objects/Solicitud_de_Avi_n__c/validationRules/Tiempo_Programado.validationRule-meta.xml
<ValidationRule>
    <fullName>Tiempo_Programado</fullName>
    <active>true</active>
    <description>Validar que la solicitud de avión se realice con 5 días de antipación</description>
    <errorConditionFormula>Tiempo_programacion__c &lt;= 4</errorConditionFormula>
    <errorDisplayField>Fecha_y_Hora_de_Salida__c</errorDisplayField>
    <errorMessage>La solicitud de avión debe realizarse con 5 días de anticipación respecto a la fecha programada de su viaje.
Favor de validar nuevamente su solicitud</errorMessage>
</ValidationRule>