force-app/main/default/objects/Solicitud_de_Avi_n__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Fecha_de_solicitud__c</columns>
    <columns>NAME</columns>
    <columns>Estatus__c</columns>
    <columns>Nombre_del_Empleado__c</columns>
    <columns>Destino__c</columns>
    <columns>Fecha_y_Hora_de_Salida__c</columns>
    <columns>Fecha_y_Hora_de_Regreso__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>